(library
 (name common)
 (modules Common)
 (preprocess
  (pps ppx_sexp_conv))
(libraries sedlex)
 )

(library
 (name expr)
 (modules Expr)
 (preprocess
  (pps ppx_sexp_conv))
 (libraries common))

(library
 (name lexer)
 (modules Lexer)
 (libraries common sedlex)
 (preprocess
  (pps sedlex.ppx ppx_sexp_conv)))

(library
 (name primitives)
 (modules Primitives)
 (libraries common expr))

(menhir
 (modules parser)
 (flags --dump --external-tokens Lexer.Tok))

(library
 (name parser)
 (modules parser)
 (libraries common expr lexer menhirLib))
